@@ -1,3 +1,4 @@
+"\
 <package pkgid=\"%|PACKAGEDIGEST?{%{PACKAGEDIGEST}}|\" name=\"%{NAME:cdata}\" arch=\"%{ARCH:cdata}\">\
 \n  <version epoch=\"%|EPOCH?{%{EPOCH}}:{0}|\" ver=\"%{VERSION:cdata}\" rel=\"%{RELEASE:cdata}\"/>\
 %|filesxmlentry2?{\
@@ -5,4 +6,5 @@
 \n  %{filesxmlentry2}\
 ]\
 }|\
-\n</package>
+\n</package>\
+\n"
