@@ -1,3 +1,4 @@
+"\
 INSERT into packages values (\
 '%{DBINSTANCE}'\
 , '%|PACKAGEDIGEST?{%{PACKAGEDIGEST}}|'\
@@ -11,4 +12,5 @@ INSERT into packages values (\
 );\
 ]}:{\
 \nINSERT into changelog ('%{DBINSTANCE}', '', '', '');\
-}|
+}|\
+\n"
