@@ -1,3 +1,4 @@
+"\
 <package pkgid=\"%|PACKAGEDIGEST?{%{PACKAGEDIGEST}}|\" name=\"%{NAME:cdata}\" arch=\"%{ARCH:cdata}\">\
 \n  <version epoch=\"%|EPOCH?{%{EPOCH}}:{0}|\" ver=\"%{VERSION:cdata}\" rel=\"%{RELEASE:cdata}\"/>\
 %|changelogname?{\
@@ -7,4 +8,5 @@
 }:{\
 \n  <changelog/>\
 }|\
-\n</package>
+\n</package>\
+\n"
